--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,18 @@
           background-color: white;
           margin-left: 10px;
       }
+      button:active{
+        background-color: green;
+        color:white;
+        filter: drop-shadow(5px 5px 10px #000000);
+        transition: all 0.3s;
+        cursor: pointer;
+        }
+
+        button:active body{
+        background-color: #fff;
+        }
+        
       @media screen and (max-width:768px) {
           form{
           display: flex;
